# councilai

./: .gitignore  LICENSE.md  README.md  START_HERE.md  VERSIONING.md  discovery.md
.devcontainer/: devcontainer.json
agents/: architecture-agent.md  compliance-agent.md  discovery-agent.md  evaluator-agent.md  init-agent.md  prd-agent.md  release-governance-agent.md  security-agent.md  testing-agent.md
ci/: enforcement-rules.md
compliance/: compliance-control-test-matrix.md  risk-register.md
council/: council-debate-protocol.md
demo-run/: architecture.md  compliance.md  council-decisions.md  discovery.md  prd.md  release-governance.md
docs/: agent-handoff.md  walkthrough-telehealth-bot.md
examples/: example-council-decision.md  example-discovery.md
execution/: agent-invocation-contract.md  prompt-playbook.md  prompt-testing-framework.md  runner-spec.md
governance/: behavioral-safety-contract.md
monetization/: go-to-market.md  pricing-philosophy.md  tier-definition.md
onboarding/: common-mistakes.md  onboarding-checklist.md
product/: adoption-modes.md  personas.md  product-boundaries.md  readiness-checklist.md  value-proposition.md
prompts/: architecture.prompt.md  compliance.prompt.md  council.prompt.md  discovery.prompt.md  prd.prompt.md  release.prompt.md  testing.prompt.md
runner/: .env.example  QUICKSTART.md  README.md  pyproject.toml
runner/council_runner/: cli.py  config.py  llm.py  runner.py  validation.py
runner/tests/: conftest.py  test_config.py  test_llm.py  test_project_scoping.py  test_runner.py  test_validation.py
(+41 files in other folders)
