[tool.poetry]
name = "council-runner"
version = "0.1.0"
description = "CouncilAI Execution Runner"
authors = ["CouncilAI Team"]

[tool.poetry.dependencies]
python = "^3.9"
typer = ">=0.12.0"
openai = "^1.0.0"
anthropic = "^0.40.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
council = "council_runner.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
